--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ main{
     font-weight: 600;
 }
 
-.nav-link.active{
+.nav-link.active a{
     color: antiquewhite;
     font-weight: 600;
 }
@@ -568,6 +568,27 @@ article.active{
     height: 100%;
     border-radius: inherit;
 }
+
+/* contact */
+
+.mapbox {
+    position: relative;
+    height: 250px;
+    width: 100%;
+    border-radius: 16px;
+    margin-bottom: 30px;
+    border: 1px solid var(--jet);
+    overflow: hidden;
+  }
+  
+  .mapbox figure { height: 100%; }
+  
+  .mapbox iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    filter: grayscale(1) invert(1);
+  }
 
 .contact-form{
     margin-bottom: 15px;
